--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -2,7 +2,7 @@
     "ace": {
         "@guessTabSize": "true",
         "@newLineMode": "unix",
-        "@tabSize": "4",
+        "@tabSize": 5,
         "@useSoftTabs": "true"
     },
     "build": {
